--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 <body>
     <div class="container">
         <nav>
-            <a href="index.html" class="name-title">Maaz Amjad</a>
+            <a href="index.html" class="name-title">Woohyuk Lee</a>
             <div class="nav-links">
                 <a href="projects.html">Projects</a>
                 <a href="files/Maaz_cv.pdf" target="_blank">CV</a>
@@ -227,8 +227,8 @@
 
         <div class="profile-section">
             <div class="profile-sidebar">
-                <img src="images/profile.jpg" alt="Profile Picture" class="profile-image">
-                <h1>Maaz Amjad</h1>
+                <img src="images/picture.JPG" alt="Profile Picture" class="profile-image">
+                <h1>Woohyuk Lee</h1>
                 <p class="interests">Interests in AI, Human Computer Interaction.</p>
                 <div class="social-links">
                     <a href="#" class="social-link location">
@@ -239,15 +239,15 @@
                         <img src="images/logo.png" alt="TTU Logo" class="ttu-logo">
                         Texas Tech University
                     </a>
-                    <a href="mailto:maaz.amjad@ttu.edu" class="social-link email">
+                    <a href="mailto:woohlee@ttu.edu" class="social-link email">
                         <i class="fas fa-envelope"></i>
                         Email
                     </a>
-                    <a href="https://github.com/MaazAmjad" class="social-link github" target="_blank">
+                    <a href="https://github.com/Woohyuk-Lee04" class="social-link github" target="_blank">
                         <i class="fab fa-github"></i>
                         Github
                     </a>
-                    <a href="https://www.linkedin.com/in/maazmjad/" class="social-link linkedin" target="_blank">
+                    <a href="https://www.linkedin.com/in/woohyuk-lee/" class="social-link linkedin" target="_blank">
                         <i class="fab fa-linkedin"></i>
                         LinkedIn
                     </a>
